@@ -2,6 +2,8 @@ $Id$
 
 2017-12-13  Christian Franke  <franke@computer.org>
 
+	ataprint.cpp: Add JSON support for '-l [x]selftest'.
+
 	atacmds.cpp, atacmds.h: Move self-test print functions to ...
 	ataprint.cpp: ... here.
 	smartd.cpp: Rework self-test error counting.
